# DelineationCPP

./: CMakeLists.txt  main.cpp
delineation/: morfology_point.h  peaks_zcs_ids.cpp  peaks_zcs_ids.h  wave_delineation.cpp  wave_delineation.h
delineation/p/: delineation.cpp  delineation.h  offset.h  onset.h  peak.h  routines.h  zcs.h
delineation/p/beta/: beta.h  biphasic.h  flexure.h  legacy.cpp  legacy.h  offset.h  onset.h  peak.h  zcs.h
delineation/p/delta/: addition.h  data.h  delta.cpp  delta.h  removal.h
delineation/p/fibrillation/: fibrillation.cpp  fibrillation.h
delineation/p/gamma/: data.cpp  data.h  gamma.h  offset.h  onset.h  peak.h  points.h  xtd.h
delineation/qrs/: delineation.cpp  delineation.h
delineation/qrs/alpha/: alpha.h  first.h  second.h  third.h
delineation/qrs/beta/: beta.h  offset.h  onset.h  peak.h
delineation/qrs/gamma/: beta_legacy.h  branches.h  data.cpp  data.h  default.h  gamma.h  left.h  offset.h  onset.h  orders.h  peak.h  right.h
discrete_wavelet_transform/: wdc.h
ecg/: ecg.cpp  ecg.h
ecg_lead/: ecg_lead.cpp  ecg_lead.h
filtration/: adaptive_filtration.h  common_filtration.h  cwt_filtration.h
modulus_maxima/: modulus_maxima.cpp  modulus_maxima.h  routines.h
params/: params.h
threshold_crossings/: routines.h
zero_crossing/: routines.h  zero_crossing.cpp  zero_crossing.h
